# logpeek-server

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml  config.toml
backend/src/: lib.rs  main.rs
backend/src/auth/: mod.rs
backend/src/config/: mod.rs
backend/src/log_reader/: mod.rs  parser.rs  parsers.rs
backend/src/middleware/: mod.rs
backend/src/routes/: application_list.rs  authenticate.rs  dashboard_info.rs  hello_world.rs  index.rs  index_handler.rs  log_table.rs  mirror_json.rs  mod.rs  sysinfo.rs
frontend/: bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.ts  utils.ts  vue-data-ui.d.ts
frontend/src/components/: ApplicationSelect.vue  DashboardBreakdown.vue  ErrorCountByModule.vue  HelloWorld.vue  Homepage.vue  Icon.vue  LogEntry.vue  LogTable.vue  LogTableElement.vue  Menu.vue  SmallSparkline.vue  Snackbar.vue  SparkGauge.vue  SystemInfo.vue
frontend/src/interfaces/: DashboardInfo.ts  LogEntry.ts  LogTableResponse.ts  SystemInfo.ts
frontend/src/layouts/default/: View.vue
frontend/src/router/: index.ts
frontend/src/store/: app.ts
frontend/src/styles/: colors.ts
frontend/src/views/: Home.vue  HomeView.vue  LogTable.vue  LogTableView.vue  LoginView.vue
