[package]
name = "logpeek-server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
config = { version = "0.14.0", features = ["toml"] }
glob = "0.3.1"
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["serde"] }
logpeek = "0.1.0"
mime_guess = "2.0.4"
regex = "1.10.2"
ringbuffer = "0.15.0"
rust-embed = "8.2.0"
serde = { version = "1.0.193", features = ["derive"] }
sysinfo = "0.30.5"
thiserror = "1.0.56"
time = { version = "0.3.31", features = ["parsing", "serde"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
base64 = "0.21.7"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
axum-extra = { version = "0.9.2", features = ["query"] }